--- a/application/modules/sudoku/views/scripts/_extra/navigation.phtml
+++ b/application/modules/sudoku/views/scripts/_extra/navigation.phtml
@@ -1,6 +1,6 @@
 <div class="navigation-panel">
     <div class="page-title">
-        <span class="title">&nbsp</span>
+        <i class="icon-home"></i> <a href="/"><span class="title">Вернуться на главную страницу</span></a>
     </div>
     <div class="user-block">
         <?php if ($this->user): ?>
