--- a/public/less/sudoku.less
+++ b/public/less/sudoku.less
@@ -185,7 +185,7 @@
 
 /********************************** right col *********************************/
 
-.new-game {
+.show-new-game-form {
   width: 100%;
 }
 
