--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -85,10 +85,16 @@
 @navigation-panel-navigation-panel-gradient-start: #ffeedd;
 @navigation-panel-navigation-panel-gradient-end: @navigation-panel-navigation-panel-background-color;
 
-@navigation-panel-navigation-panel-page-title-font-size: 2em;
+@navigation-panel-navigation-panel-page-title-font-size: 1em;
 @navigation-panel-navigation-panel-page-title-line-height: @navigation-panel-navigation-panel-height;
-@navigation-panel-navigation-panel-page-title-width: 200px;
+@navigation-panel-navigation-panel-page-title-width: initial;
 @navigation-panel-navigation-panel-page-title-margin-left: 10px;
+
+@navigation-panel-navigation-panel-page-title-a-color: #000;
+@navigation-panel-navigation-panel-page-title-a-text-decoration: underline;
+
+@navigation-panel-navigation-panel-page-title-a-hover-color: @navigation-panel-navigation-panel-page-title-a-color;
+@navigation-panel-navigation-panel-page-title-a-hover-text-decoration: none;
 
 @navigation-panel-navigation-panel-user-block-line-height: @navigation-panel-navigation-panel-height;
 //@navigation-panel-navigation-panel-user-block-border-left: 1px solid @default-border-color;
