--- a/public/less/navigation-panel.less
+++ b/public/less/navigation-panel.less
@@ -22,6 +22,16 @@
     line-height: @navigation-panel-navigation-panel-page-title-line-height;
     width: @navigation-panel-navigation-panel-page-title-width;
     margin-left: @navigation-panel-navigation-panel-page-title-margin-left;
+
+    a {
+      color: @navigation-panel-navigation-panel-page-title-a-color;
+      text-decoration: @navigation-panel-navigation-panel-page-title-a-text-decoration;
+
+      &:hover {
+        color: @navigation-panel-navigation-panel-page-title-a-hover-color;
+        text-decoration: @navigation-panel-navigation-panel-page-title-a-hover-text-decoration;
+      }
+    }
   }
 
   .user-block {
