--- a/application/modules/sudoku/views/scripts/layout.phtml
+++ b/application/modules/sudoku/views/scripts/layout.phtml
@@ -1,6 +1,8 @@
 <?php
 $this->headLink()
     ->appendStylesheet('/css/bootstrap.css')
+    ->appendStylesheet('/css/fontello/fontello.css')
+    ->appendStylesheet('/css/fontello/animation.css')
     ->appendStylesheet('/css/styles.css');
 
 $this->headScript()
