--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -3,6 +3,7 @@
 @import "core";
 @import "common";
 
+@import "breadcrumbs";
 @import "navigation-panel";
 @import "form";
 @import "login-register-modal";
