--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -68,6 +68,27 @@
 @common-to-top-margin: 30px auto 0;
 @common-to-top-text-align: center;
 
+// Breadcrumbs
+@breadcrumbs-breadcrumbs-font-size: 1em;
+@breadcrumbs-breadcrumbs-line-height: @navigation-panel-navigation-panel-height;
+@breadcrumbs-breadcrumbs-width: initial;
+@breadcrumbs-breadcrumbs-margin-left: 10px;
+
+@breadcrumbs-breadcrumbs-ficon-home-font-size: 25px;
+@breadcrumbs-breadcrumbs-ficon-home-opacity: .8;
+
+@breadcrumbs-breadcrumbs-breadcrumb-step-color: #000;
+@breadcrumbs-breadcrumbs-breadcrumb-step-text-decoration: underline;
+
+@breadcrumbs-breadcrumbs-breadcrumb-step-hover-color: @breadcrumbs-breadcrumbs-breadcrumb-step-color;
+@breadcrumbs-breadcrumbs-breadcrumb-step-hover-text-decoration: none;
+
+@breadcrumbs-breadcrumbs-breadcrumb-step-current-font-weight: bold;
+@breadcrumbs-breadcrumbs-breadcrumb-step-current-text-decoration: none;
+@breadcrumbs-breadcrumbs-breadcrumb-step-current-cursor: default;
+
+@breadcrumbs-breadcrumbs-breadcrumb-step-current-hover-text-decoration: @breadcrumbs-breadcrumbs-breadcrumb-step-current-text-decoration;
+
 // Navigation panel
 @navigation-panel-navigation-panel-real-height: @navigation-panel-navigation-panel-height + @navigation-panel-navigation-panel-padding-top + @navigation-panel-navigation-panel-padding-bottom + @navigation-panel-navigation-panel-border-bottom-width;
 
@@ -84,17 +105,6 @@
 @navigation-panel-navigation-panel-padding: @navigation-panel-navigation-panel-padding-top @navigation-panel-navigation-panel-padding-right @navigation-panel-navigation-panel-padding-bottom @navigation-panel-navigation-panel-padding-left;
 @navigation-panel-navigation-panel-gradient-start: #ffeedd;
 @navigation-panel-navigation-panel-gradient-end: @navigation-panel-navigation-panel-background-color;
-
-@navigation-panel-navigation-panel-page-title-font-size: 1em;
-@navigation-panel-navigation-panel-page-title-line-height: @navigation-panel-navigation-panel-height;
-@navigation-panel-navigation-panel-page-title-width: initial;
-@navigation-panel-navigation-panel-page-title-margin-left: 10px;
-
-@navigation-panel-navigation-panel-page-title-a-color: #000;
-@navigation-panel-navigation-panel-page-title-a-text-decoration: underline;
-
-@navigation-panel-navigation-panel-page-title-a-hover-color: @navigation-panel-navigation-panel-page-title-a-color;
-@navigation-panel-navigation-panel-page-title-a-hover-text-decoration: none;
 
 @navigation-panel-navigation-panel-user-block-line-height: @navigation-panel-navigation-panel-height;
 //@navigation-panel-navigation-panel-user-block-border-left: 1px solid @default-border-color;
