--- a/application/modules/sudoku/views/scripts/layout.phtml
+++ b/application/modules/sudoku/views/scripts/layout.phtml
@@ -39,7 +39,7 @@ $this->headScript()
 
 <div id="modal" class="modal hide fade">
     <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="icon-remove"></i></button>
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="ficon-cancel"></i></button>
         <h3></h3>
     </div>
     <div class="modal-body">
