--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -4,6 +4,7 @@
 @import "common";
 
 @import "breadcrumbs";
+@import "create-game";
 @import "navigation-panel";
 @import "form";
 @import "login-register-modal";
