--- a/application/modules/sudoku/views/scripts/index/game.phtml
+++ b/application/modules/sudoku/views/scripts/index/game.phtml
@@ -2,9 +2,9 @@
     <div class="section create-new-game-container">
         <button type="button" class="show-new-game-form btn btn-success btn-large">Начать новую игру</button>
     </div>
-    <div class="section game-history-container">
+    <div class="section games-history-container">
         <div class="section-title">История ваших игр:</div>
-        <table class="game-history">
+        <table class="games-history">
             <tbody>
             <tr class="head">
                 <th>Начало</th>
@@ -38,8 +38,8 @@
             </tr>
             </tbody>
         </table>
-        <div class="show-game-history-container">
-            <a href="" class="show-game-history">Просмотреть всю историю игр</a>
+        <div class="show-games-history-container">
+            <a href="" class="show-games-history">Просмотреть всю историю игр</a>
         </div>
     </div>
 </div>
