--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -25,10 +25,12 @@
 
 @common-left-column-width: 300px;
 
-@common-center-column-min-width: 800px;
+@common-center-column-min-width: 600px;
 @common-center-column-background-color: #fff;
 @common-center-column-border-left: 1px solid @default-border-color;
 @common-center-column-border-right: 1px solid @default-border-color;
+@common-center-column-padding-right: 20px;
+@common-center-column-padding-left: @common-center-column-padding-right;
 
 @common-right-column-width: 300px;
 @common-right-column-font-size: 12px;
@@ -59,6 +61,7 @@
 
 @common-game-state-font-weight: bold;
 @common-game-state-new-color: #2d00b0;
+@common-game-state-in-progress-color: #0d9cd3;
 @common-game-state-paused-color: #bd561d;
 @common-game-state-finished-color: #14b000;
 
