--- a/application/modules/sudoku/views/scripts/index/user-games-history.phtml
+++ b/application/modules/sudoku/views/scripts/index/user-games-history.phtml
@@ -147,24 +147,81 @@
 
 <div class="center-column">
     <div class="content">
-        <h1>Судоку</h1>
-        <p>
-            Логическая игра, в которой нужно заполнить поле цифрами, придерживаясь определенных правил.<br>
-            В Википедии вы можете почитать подробную
-            <a href="http://ru.wikipedia.org/wiki/%D0%A1%D1%83%D0%B4%D0%BE%D0%BA%D1%83" rel="nofollow" target="_blank" class="wiki-link">статью об игре</a>.
-        </p>
-        <div class="game-board-example">
-            <?php echo $this->partial('_extra/sudoku-board.phtml', ['parameters' => $this->boardExample,]); ?>
-            <span class="image-info">(Пример головоломки "Судоку")</span>
+        <?php if ($this->user['id'] == $this->currentUser['id']): ?>
+            <h1>История ваших игр</h1>
+        <?php else: ?>
+            <h1>История игр игрока <?php echo $this->user['full_name']; ?></h1>
+        <?php endif; ?>
+        <div class="pagination">
+            <?php if ($this->previousPage): ?>
+            <div class="pull-left">
+                <i class="ficon-left-open"></i><a href="<?php echo $this->url(['action' => 'user-games-history'], 'sudoku', true); ?>?page=<?php echo $this->previousPage; ?>">Предыдущая страница</a>
+            </div>
+            <?php endif; ?>
+            <?php if ($this->nextPage): ?>
+            <div class="pull-right">
+                <a href="<?php echo $this->url(['action' => 'user-games-history'], 'sudoku', true); ?>?page=<?php echo $this->nextPage; ?>">Следующая страница</a><i class="ficon-right-open"></i>
+            </div>
+            <?php endif; ?>
         </div>
-        <p>
-            <span class="sudoku-game-goal">Цель игры:</span><br>
-            Необходимо заполнить поле цифрами от 1 до 9 так, чтоб в каждой колонке, строчке и под-квадрате не было повторяющихся цифр.
-        </p>
-        <div class="game-board-example">
-            <?php echo $this->partial('_extra/sudoku-board.phtml', ['parameters' => $this->boardSolvedExample,]); ?>
-            <span class="image-info">(Пример решенной головоломки "Судоку")</span>
+        <table class="games-history">
+            <tbody>
+            <tr class="head">
+                <th>Начало</th>
+                <th>Статус</th>
+                <th>В игре</th>
+            </tr>
+            <?php $i = 1; ?>
+            <?php foreach ($this->userGamesHistory as $game): ?>
+                <?php
+                $state = $game['state'];
+                $state = isset($this->states[$state]) ? $this->states[$state] : '';
+                $duration = secondsToArray($game['duration']);
+                $time = isset($duration['seconds']) ? $duration['seconds'] : '';
+                if (isset($duration['days'])) {
+                    $time = $duration['days'] . ' ' . ($duration['days'] > 1 ? 'дней' : 'день');
+                } elseif (isset($duration['hours']) || isset($duration['minutes'])) {
+                    if (!isset($duration['hours'])) {
+                        $time = intval($duration['minutes']) . ':' . $time;
+                    } else {
+                        $time = $duration['hours'] . ':' . $duration['minutes'] . ':' . $time;
+                    }
+                } else {
+                    // only seconds
+                    $time = intval($time);
+                    $last = intval(substr($time, -1));
+                    if ($last == 0 || ($time >= 5 && $time <= 19)) {
+                        $time .= ' секунд'; // нуль секунд, пять секунд, четырнадцать секунд, двадцать секунд
+                    } elseif ($last == 1) {
+                        $time .= ' секунда'; // одна секунда, двадцать одна секунда
+                    } elseif ($last < 5) {
+                        $time .= ' секунды'; // две секунды, двадцать три секунды
+                    }
+                }
+                $even = ($i++ % 2) ? '' : ' even';
+                ?>
+                <tr class="hlink<?php echo $even; ?>" data-href="<?php echo $this->url(['gameHash' => $game['hash']], 'sudoku-game', true); ?>">
+                    <td class="game-created-datetime"><?php echo (new DateTime($game['created']))->format('d-m-Y H:i'); ?></td>
+                    <td class="game-state <?php echo $state['code']; ?>"><?php echo $state['title']; ?></td>
+                    <td class="time"><?php echo $time; ?></td>
+                </tr>
+            <?php endforeach; ?>
+            </tbody>
+        </table>
+        <?php if (count($this->userGamesHistory) > 20): ?>
+        <div class="pagination">
+            <?php if ($this->previousPage): ?>
+                <div class="pull-left">
+                    <i class="ficon-left-open"></i><a href="<?php echo $this->url(['action' => 'user-games-history'], 'sudoku', true); ?>?page=<?php echo $this->previousPage; ?>">Предыдущая страница</a>
+                </div>
+            <?php endif; ?>
+            <?php if ($this->nextPage): ?>
+                <div class="pull-right">
+                    <a href="<?php echo $this->url(['action' => 'user-games-history'], 'sudoku', true); ?>?page=<?php echo $this->nextPage; ?>">Следующая страница</a><i class="ficon-right-open"></i>
+                </div>
+            <?php endif; ?>
         </div>
+        <?php endif; ?>
         <div class="to-top">
             <a href="" class="scroll-to-top">Вверх <i class="icon-chevron-up"></i></a>
         </div>
