--- a/public/css/fontello/fontello-codes.css
+++ b/public/css/fontello/fontello-codes.css
@@ -2,5 +2,8 @@
 .ficon-spin6:before { content: '\e805'; } /* '' */
 .ficon-cancel:before { content: '\e802'; } /* '' */
 .ficon-down-open:before { content: '\e800'; } /* '' */
+.ficon-left-open:before { content: '\e804'; } /* '' */
+.ficon-right-open:before { content: '\e806'; } /* '' */
+.ficon-up-open:before { content: '\e807'; } /* '' */
 .ficon-angle-right:before { content: '\e803'; } /* '' */
 .ficon-home:before { content: '\e801'; } /* '' */
