--- a/public/css/fontello/fontello.css
+++ b/public/css/fontello/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?65774964');
-  src: url('../font/fontello.eot?65774964#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?65774964') format('woff'),
-       url('../font/fontello.ttf?65774964') format('truetype'),
-       url('../font/fontello.svg?65774964#fontello') format('svg');
+  src: url('../font/fontello.eot?57465831');
+  src: url('../font/fontello.eot?57465831#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?57465831') format('woff'),
+       url('../font/fontello.ttf?57465831') format('truetype'),
+       url('../font/fontello.svg?57465831#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?65774964#fontello') format('svg');
+    src: url('../font/fontello.svg?57465831#fontello') format('svg');
   }
 }
 */
@@ -53,5 +53,8 @@
 .ficon-spin6:before { content: '\e805'; } /* '' */
 .ficon-cancel:before { content: '\e802'; } /* '' */
 .ficon-down-open:before { content: '\e800'; } /* '' */
+.ficon-left-open:before { content: '\e804'; } /* '' */
+.ficon-right-open:before { content: '\e806'; } /* '' */
+.ficon-up-open:before { content: '\e807'; } /* '' */
 .ficon-angle-right:before { content: '\e803'; } /* '' */
 .ficon-home:before { content: '\e801'; } /* '' */
