--- a/application/modules/sudoku/views/scripts/_extra/navigation.phtml
+++ b/application/modules/sudoku/views/scripts/_extra/navigation.phtml
@@ -1,10 +1,6 @@
 <div class="navigation-panel">
-    <?php echo $this->partial('_extra/breadcrumbs.phtml', ['breadcrumbs' => $this->breadcrumbs]); ?>
+    <?php echo $this->partial('_partials/breadcrumbs.phtml', ['breadcrumbs' => $this->breadcrumbs]); ?>
     <div class="user-block">
-        <?php if ($this->currentUser): ?>
-            <?php echo $this->partial('_extra/user-block.phtml', ['currentUser' => $this->currentUser]); ?>
-        <?php else: ?>
-            <?php echo $this->partial('_extra/login-block.phtml'); ?>
-        <?php endif; ?>
+        <?php echo $this->partial('_partials/user-block.phtml', ['currentUser' => $this->currentUser]); ?>
     </div>
 </div>
