--- a/application/modules/sudoku/views/scripts/_partials/sudoku-controls.phtml
+++ b/application/modules/sudoku/views/scripts/_partials/sudoku-controls.phtml
@@ -18,14 +18,14 @@
             </tr>
         <?php endfor; ?>
         <tr>
-            <td class="number clear" colspan="3" data-number="">clear</td>
+            <td class="number clear" colspan="3" data-number="">пусто</td>
         </tr>
     </table>
 </div>
 
 <div class="additional-buttons">
-    <button class="undo-move btn btn-mini disabled" data-moves=""><i class="icon-chevron-left"></i> Undo</button>
-    <button class="redo-move btn btn-mini disabled" data-moves=""><i class="icon-chevron-right"></i>Redo</button>
-    <button class="check-field btn btn-mini">Check</button>
-    <button class="clear-field btn btn-mini btn-danger">Clear</button>
+    <button class="undo-move btn btn-mini disabled" data-moves=""><i class="icon-chevron-left"></i> Отменить ход</button>
+    <button class="redo-move btn btn-mini disabled" data-moves=""><i class="icon-chevron-right"></i>Повторить ход</button>
+    <button class="check-field btn btn-mini">Проверить поле</button>
+    <button class="clear-field btn btn-mini btn-danger">Очистить поле</button>
 </div>
