--- a/application/modules/sudoku/views/scripts/index/get-board.ajax.phtml
+++ b/application/modules/sudoku/views/scripts/index/get-board.ajax.phtml
@@ -4,4 +4,4 @@ $params = [
     'hide'       => isset($this->hide) ? $this->hide : false,
 ];
 ?>
-<?php echo $this->partial('_extra/sudoku-board.phtml', $params); ?>
+<?php echo $this->partial('_partials/sudoku-board.phtml', $params); ?>
