--- a/application/modules/sudoku/views/scripts/_extra/login-modal.phtml
+++ b/application/modules/sudoku/views/scripts/_extra/login-modal.phtml
@@ -1,4 +1,3 @@
-
 <div id="login-modal" class="modal hide fade">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="icon-remove"></i></button>
@@ -17,7 +16,7 @@
                     </div>
                     <hr class="line-separator">
                     <div class="login-form">
-                        <form class="login form-horizontal" method="post" action="/user/login">
+                        <form class="login form-horizontal" method="post" action="<?php echo $this->url(['module' => 'sudoku', 'controller' => 'user', 'action' => 'login'], 'default', true); ?>">
                             <input type="hidden" name="submitted" value="1">
                             <div class="form-message"></div>
                             <div class="control-group form-field field-login-email">
@@ -37,7 +36,7 @@
                         <h3>Представтесь</h3>
                     </div>
                     <div class="register-form">
-                        <form class="register form-horizontal" method="post" action="/user/register">
+                        <form class="register form-horizontal" method="post" action="<?php echo $this->url(['module' => 'sudoku', 'controller' => 'user', 'action' => 'register'], 'default', true); ?>">
                             <input type="hidden" name="submitted" value="1">
                             <div class="form-message"></div>
                             <div class="control-group form-field field-login-email">
