--- a/application/modules/sudoku/views/scripts/_partials/sudoku-board.phtml
+++ b/application/modules/sudoku/views/scripts/_partials/sudoku-board.phtml
@@ -1,8 +1,8 @@
 <?php
+$parameters = is_array($this->parameters) ? $this->parameters : [];
+
 $cols = 9; // 1..9
 $rows = 9;
-
-$parameters = isset($this->parameters) && is_array($this->parameters) ? $this->parameters : [];
 
 /**
  * @param int $row
