--- a/application/modules/sudoku/views/scripts/index/create.ajax.phtml
+++ b/application/modules/sudoku/views/scripts/index/create.ajax.phtml
@@ -1,12 +1,15 @@
 <?php
-$selectedDifficulty = isset($this->selectedDifficulty) ? $this->selectedDifficulty : 0;;
-$selectedDifficulty = $this->difficulties[$selectedDifficulty];
+if (isset($this->selectedDifficulty) && $this->difficulties[$this->selectedDifficulty]) {
+    $selectedDifficulty = $this->difficulties[$this->selectedDifficulty];
+} else {
+    $selectedDifficulty = $this->difficulties[Application_Service_Game_Abstract::DEFAULT_GAME_DIFFICULTY];
+}
 $titleTemplate = '%s (%s открытых клеток)';
 ?>
 <div class="create-new-game-container">
     <div class="difficulties">
         <form class="create-new-game ajax-form-submit form-inline" method="post" action="<?php echo $this->url(['action' => 'create'], 'sudoku', true); ?>">
-            <input type="hidden" name="submit" value="1">
+            <input type="hidden" name="submitted" value="1">
             <div class="form-message hidden"></div>
             <select class="select-difficulties" name="difficulty">
                 <?php foreach ($this->difficulties as $difficulty): ?>
@@ -26,7 +29,7 @@ $titleTemplate = '%s (%s открытых клеток)';
     </div>
     <div class="game-board-example">
         <div class="game-board-example-container">
-            <?php echo $this->partial('_extra/sudoku-board.phtml', ['parameters' => $this->boardExample, 'hide' => true]); ?>
+            <?php echo $this->partial('_partials/sudoku-board.phtml', ['parameters' => $this->boardExample, 'hide' => true]); ?>
         </div>
         <span class="image-info">(Пример головоломки "Судоку")</span>
     </div>
