--- a/application/modules/sudoku/views/scripts/index/game.phtml
+++ b/application/modules/sudoku/views/scripts/index/game.phtml
@@ -2,46 +2,9 @@
     <div class="section create-new-game-container">
         <button type="button" class="show-new-game-form btn btn-success btn-large">Начать новую игру</button>
     </div>
-    <div class="section games-history-container">
-        <div class="section-title">История ваших игр:</div>
-        <table class="games-history">
-            <tbody>
-            <tr class="head">
-                <th>Начало</th>
-                <th>Статус</th>
-                <th>В игре</th>
-            </tr>
-            <tr>
-                <td>21-04-2014 20:28</td>
-                <td><span class="game-state paused">Приостановлена</span></td>
-                <td class="time">2:34</td>
-            </tr>
-            <tr class="even">
-                <td>21-04-2014 20:28</td>
-                <td><span class="game-state paused">Приостановлена</span></td>
-                <td class="time">2:34</td>
-            </tr>
-            <tr>
-                <td>21-04-2014 20:28</td>
-                <td><span class="game-state finished">Завершена</span></td>
-                <td class="time">2:34</td>
-            </tr>
-            <tr class="even">
-                <td>21-04-2014 20:28</td>
-                <td><span class="game-state finished">Завершена</span></td>
-                <td class="time">2:34</td>
-            </tr>
-            <tr>
-                <td>21-04-2014 20:28</td>
-                <td><span class="game-state finished">Завершена</span></td>
-                <td class="time">2:34</td>
-            </tr>
-            </tbody>
-        </table>
-        <div class="show-games-history-container">
-            <a href="" class="show-games-history">Просмотреть всю историю игр</a>
-        </div>
-    </div>
+
+    <?php echo $this->partial('_partials/right-col-user-games-history.phtml', ['gamesHistory' => $this->gamesHistory, 'states' => $this->states]); ?>
+
 </div>
 
 <div class="center-column">
@@ -61,7 +24,7 @@
         <div class="game-info">
             Сложность: <span class="current-difficulty"><?php echo $currentDifficultyText; ?></span>
         </div>
-        <?php echo $this->partial('_extra/sudoku-game.phtml', ['sudoku' => $this->sudoku]); ?>
+        <?php echo $this->partial('_partials/sudoku-game.phtml', ['sudoku' => $this->sudoku]); ?>
         <?php $this->headScript()->appendScript('var $game = new window.Sudoku(\'' .  $this->sudoku->getHash() . '\');'); ?>
 
     </div>
