--- a/application/modules/sudoku/views/scripts/index/index.phtml
+++ b/application/modules/sudoku/views/scripts/index/index.phtml
@@ -3,97 +3,10 @@
         <button type="button" class="show-new-game-form btn btn-success btn-large">Начать новую игру</button>
     </div>
 
-    <?php echo $this->partial('_partials/right-col-user-games-history.phtml', ['gamesHistory' => $this->gamesHistory, 'states' => $this->states]); ?>
+    <?php echo $this->render('_partials/right-col-user-games-history.phtml', ['gamesHistory' => $this->gamesHistory, 'states' => $this->states]); ?>
+    <?php // echo $this->partial('_partials/right-col-best-users.phtml', ['bestUsers' => $this->bestUsers, 'difficulties' => $this->difficulties]); ?>
+    <?php echo $this->partial('_partials/right-col-user-games-history.phtml', ['bestUsers' => $this->bestUsers, 'difficulties' => $this->difficulties, 'currentUser' => $this->currentUser]); ?>
 
-    <div class="section top-user-ratings-container">
-        <div class="section-title">Лучшие игроки:</div>
-        Сложность:
-        <select class="change-top-user-ratings-difficulty change-difficulty btn-small">
-            <?php foreach ($this->difficulties as $difficulty): ?>
-                <option value="<?php echo $difficulty['id']; ?>"><?php echo $difficulty['title']; ?></option>
-            <?php endforeach; ?>
-        </select>
-        <table class="top-user-ratings">
-            <tbody>
-            <tr class="head">
-                <th>#</th>
-                <th>Имя</th>
-                <th>Время</th>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>Вася</td>
-                <td class="time">5:55</td>
-            </tr>
-            <tr class="even">
-                <td>2</td>
-                <td>Коля</td>
-                <td class="time">5:55</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Петя</td>
-                <td class="time">5:55</td>
-            </tr>
-            <tr class="even">
-                <td>4</td>
-                <td>Иван</td>
-                <td class="time">5:55</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>Ористарх</td>
-                <td class="time">5:55</td>
-            </tr>
-            </tbody>
-        </table>
-        <div class="show-top-user-ratings-container">
-            <a href="" class="show-top-user-ratings">Просмотреть весь список игроков</a>
-        </div>
-    </div>
-    <div class="section my-ratings-container">
-        <div class="section-title">Ваш рейтинг:</div>
-        Сложность:
-        <select class="my-user-ratings-difficulty change-difficulty btn-small">
-            <?php foreach ($this->difficulties as $difficulty): ?>
-                <option value="<?php echo $difficulty['id']; ?>"><?php echo $difficulty['title']; ?></option>
-            <?php endforeach; ?>
-        </select>
-        <table class="my-user-ratings">
-            <tbody>
-            <tr class="head">
-                <th>#</th>
-                <th>Имя</th>
-                <th>Время</th>
-            </tr>
-            <tr class="even">
-                <td>8</td>
-                <td>Вася</td>
-                <td class="time">5:55</td>
-            </tr>
-            <tr>
-                <td>9</td>
-                <td>Коля</td>
-                <td class="time">5:55</td>
-            </tr>
-            <tr class="me even">
-                <td>10</td>
-                <td>Петя</td>
-                <td class="time">5:55</td>
-            </tr>
-            <tr>
-                <td>11</td>
-                <td>Иван</td>
-                <td class="time">5:55</td>
-            </tr>
-            <tr class="even">
-                <td>12</td>
-                <td>Ористарх</td>
-                <td class="time">5:55</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
 </div>
 
 <div class="center-column">
