--- a/application/modules/sudoku/views/scripts/index/index.phtml
+++ b/application/modules/sudoku/views/scripts/index/index.phtml
@@ -3,9 +3,9 @@
         <button type="button" class="show-new-game-form btn btn-success btn-large">Начать новую игру</button>
     </div>
 
-    <?php echo $this->render('_partials/right-col-user-games-history.phtml', ['gamesHistory' => $this->gamesHistory, 'states' => $this->states]); ?>
-    <?php // echo $this->partial('_partials/right-col-best-users.phtml', ['bestUsers' => $this->bestUsers, 'difficulties' => $this->difficulties]); ?>
-    <?php echo $this->partial('_partials/right-col-user-games-history.phtml', ['bestUsers' => $this->bestUsers, 'difficulties' => $this->difficulties, 'currentUser' => $this->currentUser]); ?>
+    <?php echo $this->partial('_partials/right-col-user-games-history.phtml', ['gamesHistory' => $this->gamesHistory, 'states' => $this->states]); ?>
+    <?php //echo $this->partial('_partials/right-col-top-users-time.phtml', ['topUsersTime' => $this->topUsersTime, 'difficulties' => $this->difficulties]); ?>
+    <?php //echo $this->partial('_partials/right-col-my-rating.phtml', ['topUsersRating' => $this->topUsersRating, 'difficulties' => $this->difficulties, 'currentUser' => $this->currentUser]); ?>
 
 </div>
 
